# bank

./: docker-compose.yml
account/: Dockerfile  pom.xml
app_investimento/: .gitignore  README.rst  pyproject.toml
app_investimento/app_investimento/: main.py
app_investimento/app_investimento/config/: settings.py
app_investimento/app_investimento/database/: database.py
app_investimento/app_investimento/models/: investimento.py  rendimento.py  tipo_investimento.py
app_investimento/tests/: test_app_investimento.py
authorization-server/: Dockerfile  pom.xml
authorization-server/chart/: Chart.yaml  values.yaml
configserver/: Dockerfile  pom.xml
customer/: Dockerfile  pom.xml
k8s/config/: 02-authorization-server-configmap.yaml  03-postgres-configmap.yaml
k8s/ingress/: ingress.yaml
k8s/monitoring/: 01-prometheus.yaml  02-grafana.yaml
k8s/postgres/: 01-statefulset.yaml  03-service.yaml
k8s/service-account/: 01-account-configmap.yaml  01-account-deployment.yaml  02-account-deployment.yaml  02-account-service.yaml  03-account-service.yaml
k8s/service-authorization-server/: 01-authorization-server-configmap.yaml  01-deployment.yaml  02-deployment.yaml  03-service.yaml
k8s/service-configserver/: 01-configserver-deployment.yaml  02-configserver-service.yaml
k8s/service-customer/: 01-customer-configmap.yaml  01-customer-deployment.yaml  02-customer-deployment.yaml  02-customer-service.yaml  03-customer-service.yaml
k8s/service-prometheus/: 01-cluster-role.yaml  02-deployment.yaml
prometheus/: prometheus.yml
(+83 files in other folders)
