[tool.poetry]
name = "app_investimento"
version = "0.1.0"
description = ""
authors = ["Rafael Lino <rafael.veloso.lino@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
databases = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
